# cookiecutter-python-ml-project

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Makefile  README.md  pyproject.toml  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: ci.yaml
